<resources>
    <string name="app_name">TD_persistance_donnee_sql</string>
    <string name="chargement" translatable="false">Chargement...</string>
    <string name="desc_splash_screen" translatable="false">desc</string>
    <string name="username">Username :</string>
    <string name="nom" translatable="false">Nom</string>
    <string name="mot_de_passe" translatable="false">Mot de passe :</string>
    <string name="password" translatable="false">Password</string>
    <string name="mail" translatable="false">Adresse mail :</string>
    <string name="email" translatable="false">Email</string>
    <string name="envoyer" translatable="false">Envoyer</string>
</resources>